--- a/public/desktop.css
+++ b/public/desktop.css
@@ -34,16 +34,18 @@ body {
 /*bottom bar components*/
 
 .send-box {
-    background-color: rgba(0, 0, 0, .1);
+    background-color: #3b7984;
     color: white;
     height: 60px;
     border: 0 none transparent;
     border-radius: 15px;
-    width: calc(100% - 200px);
+    width: calc(100% - 202px);
     padding: 10px;
+    float: left;
+    box-shadow: inset 0 0 5px #333;
 }
 
-.send-btn {
+.send-btn-box {
     background-color: white;
     color: black;
     height: 45px;
@@ -51,13 +53,40 @@ body {
     border: 0 none transparent;
     border-radius: 12px;
     padding: 0 24px 0 24px;
-    margin: 8px 0 0 12px;
+    margin: 8px 8px 0 12px;
     float: right;
+}
+
+
+.send-btn-image{
+    display: none;
 }
 
 .smiley-btn {
     height: 48px;
     padding: 0 24px 0 24px;
+    float: left;
+}
+
+.smiley{
+    height: 32px;
+    width: 32px;
+    margin-top: 12px;
+}
+
+.send-box-input{
+    border: 0;
+    background: transparent;
+    color: white;
+
+    width: 100%;
+    margin-top: 10px;
+}
+
+.send-btn{
+    background: transparent;
+    border: 0;
+    margin-top: 10px;
 }
 
 
@@ -83,7 +112,7 @@ body {
     background-color: #41aba7;
     padding: 12px 24px 12px 24px;
     border-radius: 32px;
-    margin: 32px 26px 0 0;
+    margin: 32px 32px 0 0;
     width: 55%;
     float: right;
     position: relative;
@@ -98,7 +127,7 @@ body {
     height: 64px;
     width: 64px;
     position: absolute;
-    right: 0%;
+    right: 3%;
 }
 
 .chat-card-left .profile-name-holder {
@@ -118,7 +147,7 @@ body {
     width: 256px;
     margin: 0px 12px 0 0px;
     position: absolute;
-    right: 0%;
+    right: 3%;
 }
 
 .chat-card-left .profile-name-holder p {
@@ -128,7 +157,7 @@ body {
 .chat-card-right .profile-name-holder p {
     padding: 6px 64px 0 0;
     position: absolute;
-    right: 0%;
+    right: 3%;
 }
 
 .chat-card-left .time-holder {
@@ -141,7 +170,7 @@ body {
     color: #c8c9cb;
     margin: 6px 300px 0 0;
     position: absolute;
-    right: 0%;
+    right: 3%;
 }
 
 
